@@ -1,5 +1,7 @@
 2007-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* tkchat_mjpeg:    MPJEG stream handling for the Tcl conference
+	
 	* tkchat_mms.tcl:  Multimedia stream support with snack.
 	* tkchat_nola.tcl: demo plugin (New Orleans clock display)
 	* tkchat.tcl:      Extended hooks to be more useful for plugins
